# multilingual-toxicity-detection

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  model_adapters.md
examples/: check_text.py
src/toxicity_detection/: __init__.py  cli.py  detoxify_adapter.py  filter.py  llama_guard_adapter.py  local_rules.py  responses.py  runtime.py  schemas.py
src/toxicity_detection/data/: __init__.py
src/toxicity_detection/data/patterns/: default_patterns.txt
src/toxicity_detection/data/terms/: default_terms.txt
tests/: test_cli.py  test_local_rules.py  test_toxicity_filter.py
