[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-detection"
version = "0.1.0"
description = "A lightweight multilingual toxicity detection package with local rules and optional model adapters."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Mario Rodriguez"}
]
keywords = ["toxicity", "moderation", "safety", "nlp", "multilingual"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
detoxify = [
  "detoxify>=0.5",
]
llama-guard = [
  "accelerate>=0.30",
  "torch>=2.1",
  "transformers>=4.41",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
all = [
  "accelerate>=0.30",
  "detoxify>=0.5",
  "torch>=2.1",
  "transformers>=4.41",
]

[project.scripts]
toxicity-detect = "toxicity_detection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"toxicity_detection.data" = [
  "patterns/*.txt",
  "terms/*.txt",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
